[package]
name = "epik17_launcher"
version = "0.1.0"
edition = "2024"
build = "src/build.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
winreg = "0.10"
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4"
winapi = { version = "0.3", features = ["wincon", "winuser"] }

[build-dependencies]
winres = "0.1"